swagger for login & admins only  can create user
